--- a/Unit_1/index.html
+++ b/Unit_1/index.html
@@ -3,7 +3,7 @@
 <head>
 
 	<title>YAP</title>
-	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" type="text/css" href="CSS/main.css">
 </head>
 <body>
 	<h1>Young and Powerful</h1>
