--- a/Unit_1/Index.html
+++ b/Unit_1/Index.html
@@ -3,10 +3,9 @@
 <head>
 
 	<title>YAP</title>
-	<link rel="stylesheet" type="text/css" href="CSS/main.css"
+	<link rel="stylesheet" type="text/css" href="CSS/main.css">
 </head>
 <body>
-
 <h1>Young and Powerful</h1>
 <h2>It's time for the young people of the world to make some noise</h2>
 <p>This website exists to encourage children and teens to take on challenges set for them by adults. Children are so often underestimated in this constantly changing world. The challenges will be set by influencial people all around the world. The hope is to inspire children to showcase their talents, teamwork and opinions on the modern world. Teachers can use this in the classroom to ensure children are inspired and to highlight that education takes many forms, not only academic</p>
