--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -10,7 +10,7 @@
 		<p id="slogan">Courage is not the absence of fear, but the triumph over it</p>
 	</header>
 	<p id="intro">I have always believed that life is not meant to be lived in one place. I travel to far away places as often as I can. This website will document my travels and every new idea I take from each new place I visit. I hope you enjoy reading about my travels and I hope they inspire you to go out and explore this amazing planet.
-	
+	</p>
 	<ul>
 <h2><img id="newyorkimage" src="images/newyorkskyline.jpg" alt="newyork"  text="newyorkskyline" height="440" width="440">Places I have visited to date:</h2>
 		<li>Amsterdam, Holland</li>
@@ -24,11 +24,8 @@
 		<li>Thai Islands, Thailand</li>
 		<li>Rome, Italy</li>
 		<li>More Coming soon...</li>
-
 	</ul>
-	</p>
-
-   <footer><p>made with &hearts; in Dublin</p></footer>
+  <p>made with &hearts; in Dublin</p>
    <p>Contact me <a href="mapsandminibars@gmail.com">here</a></p>
 </body>
 </html>
