--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Maps and Mini Bars</title>
 </head>
-	<link rel="stylesheet" type="text/css" href="CSS/main3.css" > 
+	<link rel="stylesheet" type="text/css" href="css/main3.css" > 
 <body>
     <header>
 		<h1><img src="images/italycoffee.jpg" alt="girl with a latte"  text="girl with a latte" height="240" width="220">Maps and Mini Bars</h1>
