--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/main3.css" > 
 <body>
     <header>
-		<h1><img src="images/italycoffee.jpg" alt="girl with a latte"  text="girl with a latte" height="240" width="220">Maps and Mini Bars</h1>
+		<h1><img src="images/italygirl.jpg" alt="girl with a latte" text="girl with a latte" height="240" width="220">Maps and Mini Bars</h1>
 		<p id="slogan">Courage is not the absence of fear, but the triumph over it</p>
 	</header>
 	<p id="intro">I have always believed that life is not meant to be lived in one place. I travel to far away places as often as I can. This website will document my travels and every new idea I take from each new place I visit. I hope you enjoy reading about my travels and I hope they inspire you to go out and explore this amazing planet.
